@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.839 2019/04/15 14:27:49 taca Exp $
+# $NetBSD: Makefile,v 1.840 2019/07/19 21:15:16 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -217,7 +217,6 @@ SUBDIR+=	libICE
 SUBDIR+=	libSM
 SUBDIR+=	libX11
 SUBDIR+=	libXScrnSaver
-SUBDIR+=	libXTrap
 SUBDIR+=	libXau
 SUBDIR+=	libXaw
 SUBDIR+=	libXaw3d
@@ -400,7 +399,6 @@ SUBDIR+=	rgb
 SUBDIR+=	rofi
 SUBDIR+=	rox-session
 SUBDIR+=	rox-wallpaper
-SUBDIR+=	rstart
 SUBDIR+=	ruby-gnome2-gtk
 SUBDIR+=	ruby-gnome2-gtk3
 SUBDIR+=	ruby-gnome2-gtksourceview2
@@ -680,7 +678,6 @@ SUBDIR+=	xtermset
 SUBDIR+=	xtoolwait
 SUBDIR+=	xtrace
 SUBDIR+=	xtrans
-SUBDIR+=	xtrap
 SUBDIR+=	xtruss
 SUBDIR+=	xvattr
 SUBDIR+=	xvidcap
