@@ -1,20 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/07/02 12:38:32 rodent Exp $
-bin/rstart
-bin/rstartd
-lib/X11/rstart/commands/@List
-lib/X11/rstart/commands/ListContexts
-lib/X11/rstart/commands/ListGenericCommands
-lib/X11/rstart/commands/x
-lib/X11/rstart/commands/x11
-lib/X11/rstart/commands/x11r6/@List
-lib/X11/rstart/commands/x11r6/LoadMonitor
-lib/X11/rstart/commands/x11r6/Terminal
-lib/X11/rstart/config
-lib/X11/rstart/contexts/@List
-lib/X11/rstart/contexts/default
-lib/X11/rstart/contexts/x
-lib/X11/rstart/contexts/x11
-lib/X11/rstart/contexts/x11r6
-lib/X11/rstart/rstartd.real
-man/man1/rstart.1
-man/man1/rstartd.1
