@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.2975 2019/07/19 21:13:28 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.2976 2019/07/19 21:15:16 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -4900,3 +4900,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Removed x11/libXTrap [wiz 2019-07-19]
 	Updated meta-pkgs/modular-xorg-apps to 1.14.1.11 [wiz 2019-07-19]
 	Updated meta-pkgs/modular-xorg-libs to 1.8 [wiz 2019-07-19]
+	Removed x11/rstart [wiz 2019-07-19]
